--- a/_doc/sphinxdoc/source/lectures/2012.rst
+++ b/_doc/sphinxdoc/source/lectures/2012.rst
@@ -570,7 +570,7 @@
     ordre. Elle ajoute aux vertus.
 
 .. quote::
-    :author: Jared Diarmond
+    :author: Jared Diamond
     :book: De l'inégalité parmi les sociétés
     :index: rougeole
     :year: 2012
@@ -581,7 +581,7 @@
     maladie]
 
 .. quote::
-    :author: Jared Diarmond
+    :author: Jared Diamond
     :book: De l'inégalité parmi les sociétés
     :index: conflit
     :year: 2012
@@ -591,7 +591,7 @@
     pas chercher à s'entre-tuer.
 
 .. quote::
-    :author: Jared Diarmond
+    :author: Jared Diamond
     :book: De l'inégalité parmi les sociétés
     :index: religion
     :year: 2012
@@ -606,7 +606,7 @@
     autres.
 
 .. quote::
-    :author: Jared Diarmond
+    :author: Jared Diamond
     :book: De l'inégalité parmi les sociétés
     :index: fanatisme
     :year: 2012
@@ -618,7 +618,7 @@
     années.
 
 .. quote::
-    :author: Jared Diarmond
+    :author: Jared Diamond
     :book: De l'inégalité parmi les sociétés
     :index: diversification
     :year: 2012
@@ -630,7 +630,7 @@
     la fois.
 
 .. quote::
-    :author: Jared Diarmond
+    :author: Jared Diamond
     :book: De l'inégalité parmi les sociétés
     :index: union
     :year: 2012
@@ -640,7 +640,7 @@
     européen, parmi des centaines, de le parrainer.
 
 .. quote::
-    :author: Jared Diarmond
+    :author: Jared Diamond
     :book: De l'inégalité parmi les sociétés
     :index: union
     :year: 2012
