--- a/_doc/sphinxdoc/source/livres/l2000.rst
+++ b/_doc/sphinxdoc/source/livres/l2000.rst
@@ -205,7 +205,7 @@
     Et l'auteur le dit brillamment.
 
 .. quote::
-    :author: Jared Diarmond
+    :author: Jared Diamond
     :book: Effondrement
     :index: histoire
     :year: 2005
